# src/api/v1/Answer/controllers/createAnswer.js
@@ -1,7 +1,7 @@
 import answerService from "../../../../lib/Answer/index.js";
 
 const createAnswer = async(req, res, next) => {
-    const questionId =req.params.id;
+    const questionId =req.params.id || req.body.questionId;
     const user = req.user;
     
    const  status = req.body.status|| "draft";
